--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,33 @@
 body {
   font-family: theme('fontFamily.body');
 }
+
+h1 {
+  font-size: xx-large;
+}
+
+.block-shadow {
+  position: relative;
+  background-color: white;
+  border: 4px solid theme('colors.black');
+}
+
+.block-shadow::before {
+  content: '';
+  position: absolute;
+  background-color: theme('colors.black');
+  bottom: -10px;
+  height: 10px;
+  width: 100%;
+  left: 10px;
+}
+
+.block-shadow::after {
+  content: '';
+  position: absolute;
+  background-color: theme('colors.black');
+  right: -10px;
+  top: 10px;
+  width: 10px;
+  height: 100%;
+}
