--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,3 +45,14 @@ h1 {
 .yellow-shadow::before {
   background-color: theme('colors.yellow');
 }
+
+.masonry {
+  display: flex;
+  margin-left: -1.5rem;
+  width: auto;
+}
+
+.masonry-column {
+  padding-left: 1.5rem;
+  background-clip: padding-box;
+}
